# Shape-Deformation-with-Cages

./: .gitignore  CMakeLists.txt  README.md
.history/: README_20240902105455.md
meshes/3d/: convert_format.py  divide_cage.py
meshes/3d/.history/: generate_bar_cage_20240409105937.py  generate_bar_cage_20240409111007.py  generate_bar_cage_20240409111116.py  generate_bar_cage_20240409111450.py  generate_bar_cage_20240409111452.py
meshes/3d/chair/: original-model.txt
meshes/3d/complex/animal/: animal.off  animal_bounding-proxy.off
meshes/3d/complex/beast/: beast_bounding-proxy.off
meshes/3d/complex/blade/: blade_bounding-proxy.off
meshes/3d/complex/boy/: boy.off  boy_bounding-proxy.off
meshes/3d/complex/chair/: chair_bounding-proxy.off
meshes/3d/complex/filigree/: filigree_bounding-proxy.off
meshes/3d/complex/flower/: flower_bounding-proxy.off
meshes/3d/complex/hand_bones/: hand_bones.off  hand_bones_bounding-proxy.off
meshes/3d/complex/mammoth/: mammoth_bounding-proxy.off
meshes/3d/octopus/: octopus_bounding-proxy.off
meshes/3d/simple/cactus/: cactus_convex_hull.ply
resources/shaders/: anchorPoint.frag  anchorPoint.geom  anchorPoint.vert  shader.frag  shader.vert  shaders.qrc  texture.frag  texture.vert
src/: Common.h  arap.cpp  arap.h  cage.cpp  cage.h  cage2d.cpp  cage2d.h  cage3d.cpp  cage3d.h  glwidget.cpp  glwidget.h  glwidget2d.cpp  glwidget2d.h  glwidget3d.cpp  glwidget3d.h  main.cpp  mainwindow.cpp  mainwindow.h  object2d.cpp  object2d.h  object3d.cpp  object3d.h  render2d.cpp  render2d.h  staticglwidget2d.cpp  staticglwidget2d.h  staticglwidget3d.cpp  staticglwidget3d.h  synccage2d.cpp  synccage2d.h  synccage3d.cpp  synccage3d.h
src/coordinates/: gchigherorder2d.cpp  gchigherorder2d.h  greencoordinates.cpp  greencoordinates.h  greencoordinates2d.cpp  greencoordinates2d.h  greencoordinates3d.cpp  greencoordinates3d.h  mvc2d.cpp  mvc2d.h  mvc3d.cpp  mvc3d.h
src/graphics/: camera.cpp  camera.h  graphicsdebug.cpp  graphicsdebug.h  meshloader.cpp  meshloader.h  shader.cpp  shader.h  shape.cpp  shape.h
src/mesh_struct/: halfedgemesh.cpp  halfedgemesh.h  halfedgemeshobject.cpp  halfedgemeshobject.h  margincage2d.cpp  margincage2d.h
texture/: references.txt
